--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -176,6 +176,8 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
       <Link>TriggerModel\View\GUIToolTip.cs</Link>
     </Compile>
     <Compile Include="AI\AIMgrs.cs" />
+    <Compile Include="AI\Astrologian\Ability\AstAbilityDraw.cs" />
+    <Compile Include="AI\Astrologian\Ability\AstAbilityPlay.cs" />
     <Compile Include="AI\Astrologian\AstBattleData.cs" />
     <Compile Include="AI\Astrologian\AstRotation.cs" />
     <Compile Include="AI\Astrologian\AstSpellHelper.cs" />
@@ -1005,7 +1007,6 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <PackageReference Include="System.ObjectModel" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="AI\Astrologian\Ability\" />
     <Folder Include="AI\GunBreaker\SpellEvent\" />
     <Folder Include="AI\Monk\SpellQueue\" />
     <Folder Include="AI\Summoner\SpellQueue\" />
