--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -333,10 +333,12 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Katon.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Raiton.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Suiton.cs" />
+    <Compile Include="AI\Paladin\Ability\PaladinAbility_CircleofScorn.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_SpiritsWithin.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_FightorFlight.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_Blank.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_Base.cs" />
+    <Compile Include="AI\Paladin\GCD\PaladinGCD_Dot.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_Blank.cs" />
     <Compile Include="AI\Paladin\Paladin_AIPriorityQueue.cs" />
     <Compile Include="AI\Paladin\Paladin_BattleData.cs" />
