--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -333,7 +333,9 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Katon.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Raiton.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Suiton.cs" />
+    <Compile Include="AI\Paladin\Ability\PaladinAbility_Sheltron.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_CircleofScorn.cs" />
+    <Compile Include="AI\Paladin\Ability\PaladinAbility_Requiescat.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_SpiritsWithin.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_FightorFlight.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_Blank.cs" />
