--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -343,6 +343,7 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Paladin\Ability\PaladinAbility_FightorFlight.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_Blank.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_Base.cs" />
+    <Compile Include="AI\Paladin\GCD\PaladinGCD_BladeofXX.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_HolySpirit.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_Ranged.cs" />
     <Compile Include="AI\Paladin\GCD\PaladinGCD_Dot.cs" />
