--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -336,6 +336,8 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Katon.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Raiton.cs" />
     <Compile Include="AI\Ninja\SpellQueue\SpellQueue_Suiton.cs" />
+    <Compile Include="AI\Paladin\Ability\PaladinAbility_Intervene.cs" />
+    <Compile Include="AI\Paladin\Ability\PaladinAbility_IronWill.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_Sheltron.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_CircleofScorn.cs" />
     <Compile Include="AI\Paladin\Ability\PaladinAbility_Requiescat.cs" />
