--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -415,6 +415,9 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_Dot.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_EvenMinutesBurst.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_Fillers.cs" />
+    <Compile Include="AI\Samurai\GCD\SamuraiGCD_Higanbana.cs" />
+    <Compile Include="AI\Samurai\GCD\SamuraiGCD_KaeshiSetsugekka.cs" />
+    <Compile Include="AI\Samurai\GCD\SamuraiGCD_MidareSetsugekka.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_OddMinuteBurst.cs" />
     <Compile Include="AI\Samurai\GCD\SamuraiGCD_OgiNamikiriCombo.cs" />
     <Compile Include="AI\Samurai\SamuraiCombatMessageStrategy.cs" />
