--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -430,6 +430,16 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Samurai\SpellQueue\SpellQueueSlot_KaeshiSetsugekka.cs" />
     <Compile Include="AI\Samurai\SpellQueue\SpellQueue_OgiNamikiriCombo.cs" />
     <Compile Include="AI\Samurai\SpellQueue\SpellQueue_SetsugekkaCombo.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_EnergyDrain2.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_Aetherflow.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_Dissipation.cs" />
+    <Compile Include="AI\Scholar\Ability\Scholar_LucidDreaming.cs" />
+    <Compile Include="AI\Scholar\GCD\ScholarGCD_Dot.cs" />
+    <Compile Include="AI\Scholar\GCD\ScholarGCD_Base.cs" />
+    <Compile Include="AI\Scholar\Scholar_AIPriorityQueue.cs" />
+    <Compile Include="AI\Scholar\Scholar_BattleData.cs" />
+    <Compile Include="AI\Scholar\Scholar_Rotation.cs" />
+    <Compile Include="AI\Scholar\Scholar_SpellHelper.cs" />
     <Compile Include="AI\SpellEvent.cs" />
     <Compile Include="AI\Machinist\Ability\MCHAbility_BarrelStabilizer.cs" />
     <Compile Include="AI\Machinist\Ability\MCHAbility_FinalBurst.cs" />
@@ -571,6 +581,7 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="Setting\Setting\AstSettings.cs" />
     <Compile Include="Setting\Setting\BlackMageSetting.cs" />
     <Compile Include="Setting\Setting\DancerSettings.cs" />
+    <Compile Include="Setting\Setting\ScholarSettings.cs" />
     <Compile Include="Setting\Setting\DarkKnightSettings.cs" />
     <Compile Include="Setting\Setting\GunBreakerSettings.cs" />
     <Compile Include="Setting\Setting\HotkeySetting.cs" />
