--- a/AEAssist/AEAssist.csproj
+++ b/AEAssist/AEAssist.csproj
@@ -512,8 +512,20 @@ xcopy "$(SolutionDir)))\Output" "C:\Users\Black\Documents\Rebornbuddy64\Routines
     <Compile Include="AI\Summoner\SMN_BattleData.cs" />
     <Compile Include="AI\Summoner\SMN_Rotation.cs" />
     <Compile Include="AI\Summoner\SMN_SpellHelper.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_Blank.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_CircleofScorn.cs" />
     <Compile Include="AI\Warrior\Ability\WarriorAbility_defense.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_FightorFlight.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_Intervene.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_IronWill.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_Requiescat.cs" />
+    <Compile Include="AI\Warrior\Ability\WarriorAbility_SpiritsWithin.cs" />
     <Compile Include="AI\Warrior\GCD\WarriorGCD_Base.cs" />
+    <Compile Include="AI\Warrior\GCD\WarriorGCD_BladeofXX.cs" />
+    <Compile Include="AI\Warrior\GCD\WarriorGCD_Blank.cs" />
+    <Compile Include="AI\Warrior\GCD\WarriorGCD_Dot.cs" />
+    <Compile Include="AI\Warrior\GCD\WarriorGCD_HolySpirit.cs" />
+    <Compile Include="AI\Warrior\GCD\WarriorGCD_Ranged.cs" />
     <Compile Include="AI\Warrior\Warrior_AIPriorityQueue.cs" />
     <Compile Include="AI\Warrior\Warrior_BattleData.cs" />
     <Compile Include="AI\Warrior\Warrior_Rotation.cs" />
